force-app/main/default/objects/BarneySecretSauce__c/BarneySecretSauce__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>BarneySecretSauce</label>
</CustomObject>