force-app/main/default/objects/BarneySecretSauce__c/fields/Level_of_Magic__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Magic__c</fullName>
    <inlineHelpText>Number between 0 and 99 representing the magical power of tis particular sauce</inlineHelpText>
    <label>Level of Magic</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>