force-app/main/default/objects/BarneySecretSauce__c/fields/Predicted_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Outcome__c</fullName>
    <label>Predicted Outcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>