force-app/main/default/objects/BarneySecretSauce__c/fields/Where_To_Apply__c.field-meta.xml
<CustomField>
    <fullName>Where_To_Apply__c</fullName>
    <label>Where To Apply</label>
    <length>255</length>
    <type>Text</type>
</CustomField>